Bug 64698 - A software named "PC LOGO" cann't show oval by the command"stampoval 100 100"
Summary: A software named "PC LOGO" cann't show oval by the command"stampoval 100 100"
Status: RESOLVED FIXED
Alias: None
Product: Spice
Classification: Unclassified
Component: canvas (show other bugs)
Version: unspecified
Hardware: x86 (IA32) Windows (All)
: medium normal
Assignee: Spice Bug List
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-17 05:57 UTC by fengzhichun
Modified: 2014-11-10 10:38 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description fengzhichun 2013-05-17 05:57:48 UTC
I use the spicec.exe on WIN32 PC ,after connect the server,I use the software named "PC LOGO"to draw a oval by the command"stampoval 50 50",but I can't see the oval showing.However,I use "stamprect 50 50" to draw a rect,I can see a rect showing.So can you help me?
Comment 1 Fedor Lyakhov 2013-06-15 07:39:45 UTC
Hi,

What is that PC LOGO software you're mentioning? Is it free/opensource, where can I get it?

-Fedor
Comment 2 fengzhichun 2013-07-09 10:06:55 UTC
oh~ I have solved it,in spice-common\common\gdi_canvas.c,at row 322,the SpicePathSeg* seg = s->segments[0];
should be changed by SpicePathSeg* seg = s->segments[i];

--by the way,how can I compile the gtk-spice on windows.

(In reply to comment #1)
> Hi,
> 
> What is that PC LOGO software you're mentioning? Is it free/opensource,
> where can I get it?
> 
> -Fedor
Comment 3 Marc-Andre Lureau 2014-11-03 00:30:57 UTC
thanks, sent patch upstream:
http://lists.freedesktop.org/archives/spice-devel/2014-November/017804.html
Comment 4 Marc-Andre Lureau 2014-11-10 10:38:48 UTC
commit a74209a9c37c12535c04fa27b300620aebbf0a46
Author: 天外银龙 <877821264@qq.com>
Date:   Mon Nov 3 01:25:40 2014 +0100

    gdi: fix path segments drawing


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.