gdi: fix path segments drawing

Fixes:
https://bugs.freedesktop.org/show_bug.cgi?id=64698